fixed word wrap

--- a/FrontEnd/src/UserCreatedMemes.css
+++ b/FrontEnd/src/UserCreatedMemes.css
@@ -23,3 +23,7 @@ p{
 li{
     list-style: none;
 }
+
+#UserUl{
+    width: 200px;
+}
